[project]
name = "{{cookiecutter.project_name}}"
authors = [{name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}]
readme = "README.md"
description = "{{cookiecutter.description}}"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
dependencies = [
        "plotly",
        "dash",
        "dash-bootstrap-components",
]
version = "{{cookiecutter.version}}"

[project.urls]
Homepage = "{{cookiecutter.homepage}}"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "mypy",
]

[tool.setuptools]
packages = ["{{cookiecutter.project_name}}"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
strict = true
files = "{{cookiecutter.project_name}}/*.py"

[tool.isort]
profile = "black"
